--- a/apps/board-game-bloom/project.json
+++ b/apps/board-game-bloom/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "bgb",
+  "name": "board-game-bloom",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/bgb/src",
+  "sourceRoot": "apps/board-game-bloom/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,16 +10,19 @@
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
-        "outputPath": "dist/apps/bgb",
-        "index": "apps/bgb/src/index.html",
+        "outputPath": "dist/apps/board-game-bloom",
+        "index": "apps/board-game-bloom/src/index.html",
         "baseHref": "/",
-        "main": "apps/bgb/src/main.tsx",
-        "tsConfig": "apps/bgb/tsconfig.app.json",
-        "assets": ["apps/bgb/src/favicon.ico", "apps/bgb/src/assets"],
-        "styles": ["apps/bgb/src/styles.css"],
+        "main": "apps/board-game-bloom/src/main.js",
+        "tsConfig": "apps/board-game-bloom/tsconfig.app.json",
+        "assets": [
+          "apps/board-game-bloom/src/favicon.ico",
+          "apps/board-game-bloom/src/assets"
+        ],
+        "styles": ["apps/board-game-bloom/src/styles.css"],
         "scripts": [],
         "isolatedConfig": true,
-        "webpackConfig": "apps/bgb/webpack.config.js"
+        "webpackConfig": "apps/board-game-bloom/webpack.config.js"
       },
       "configurations": {
         "development": {
@@ -31,8 +34,8 @@
         "production": {
           "fileReplacements": [
             {
-              "replace": "apps/bgb/src/environments/environment.ts",
-              "with": "apps/bgb/src/environments/environment.prod.ts"
+              "replace": "apps/board-game-bloom/src/environments/environment.js",
+              "with": "apps/board-game-bloom/src/environments/environment.prod.js"
             }
           ],
           "optimization": true,
@@ -48,15 +51,15 @@
       "executor": "@nx/webpack:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "bgb:build",
+        "buildTarget": "board-game-bloom:build",
         "hmr": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "bgb:build:development"
+          "buildTarget": "board-game-bloom:build:development"
         },
         "production": {
-          "buildTarget": "bgb:build:production",
+          "buildTarget": "board-game-bloom:build:production",
           "hmr": false
         }
       }
@@ -65,20 +68,20 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/bgb/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["apps/board-game-bloom/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "bgb:build"
+        "buildTarget": "board-game-bloom:build"
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/bgb/jest.config.ts",
+        "jestConfig": "apps/board-game-bloom/jest.config.js",
         "passWithNoTests": true
       },
       "configurations": {
