--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.8.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-jest": "^29.4.1",
