--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hexgrid": "^2.0.1",
     "react-router-dom": "6.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0"
